@@ -1,5 +1,6 @@
 2009-08-27  Steffen Kamper  <info@sk-typo3.de>
 
+	* Follow-up to #11651: Allow Extbase as framework for backend modules
 	* Fixed bug #11803: sysext opendocs is shy (thanks to Steffen Gebert)
 	* Follow-up to #11652: Modern integration of module into backend using Extbase - general approach without naming of Extbase
 	* Fixed bug #11511: Resources -> Files missing in doktype Sysfolder (thanks to Steffen Gebert)
